tests/rosetta/out/Haskell/benfords-law.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/benfords-law.hs:165:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/benfords-law.hs:160:1
                 /workspace/mochi/tests/rosetta/out/Haskell/benfords-law.hs:165:1
    |
165 | main = do
    | ^^^^
